@@ -156,7 +156,7 @@ class ATNewsItem(ATDocument, ATCTImageTransform):
         self.setText(text, mimetype=translateMimetypeAlias(text_format))
         self.update(**kwargs)
 
-    def __bobo_traverse__(self, REQUEST, name, RESPONSE=None):
+    def __bobo_traverse__(self, REQUEST, name):
         """Transparent access to image scales
         """
         if name.startswith('image'):
@@ -172,6 +172,6 @@ class ATNewsItem(ATDocument, ATCTImageTransform):
                 # image might be None or '' for empty images
                 return image
 
-        return ATDocument.__bobo_traverse__(self, REQUEST, name, RESPONSE=None)
+        return ATDocument.__bobo_traverse__(self, REQUEST, name)
 
 registerATCT(ATNewsItem, PROJECTNAME)
